@@ -1,3 +1,13 @@
+1999-06-08  Alex Lancaster  <alex@santafe.edu>
+
+	* main.m (main): Use Archiver convenience method
+	-create:fromLispPath: to create instance.  Use
+	-getWithZone:object: to create the `batchSwarm' object in the
+	correct Zone.
+
+	* MousetrapBatchSwarm.m ([MousetrapBatchSwarm -buildObjects]):
+	Likewise for `modelSwarm'.
+
 1999-05-21  Alex Lancaster  <alex@santafe.edu>
 
 	* Makefile (DATAFILES): Set to batch.scm.
